feat : service DB 연동해서 수정